--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
 <h1>Добро пожаловать!</h1>
+  <p>
+    <%= link_to "Добавить автомобиль", "/addcar", :class => "btn btn-primary"  %>
+    <%= link_to "Добавить марку", "/addbrand", :class => "btn btn-primary"  %>
+  </p>
+
 
   <table class="table table-striped table-hover ">
     <thead>
@@ -17,7 +22,7 @@
         <tr>
           <td><%= car.model %></td>
           <td> <%= car.year %> </td>
-          <td> <%= car.brand_id %> </td>
+          <td> <%= car.brand.name %> </td>
           <td> <%= car.color %> </td>
           <td> <%= image_tag(car.image,  height: '100', width: '100') %> </td>
           <td> <%= link_to("Удалить", 'http://localhost:3001/cars/' + car.id.to_s, :method => :delete) %> </td>
